# chip8_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/cpu/: cpu.c  cpu.h  opcodes.c  opcodes.h
src/ram/: ram.c  ram.h
src/window/: window.c  window.h
